アップローダー

--- a/cat-coffee/index.html
+++ b/cat-coffee/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <header>
-  <a href="index.html" id="logo"><img src="images/logo-cat-coffee.png" alt="logo"/a>
+  <a href="index.html" id="logo"><img src="images/logo-cat-coffee.png" alt="logo"></a>
   
   <!-- pc用ナビゲーション -->
   <nav id="nav-PC">
@@ -18,13 +18,22 @@
     <a href="index.html#product">商品</a>
     <a href="index.html#company">会社概要</a>
    </nav>
-
 </header>
+
 <main>
-
-
-<img src="images/index/index-main-coffee.jpg" alt="main-coffee-image">
-
+<article>
+  <!-- メインビジュアル -->
+   
+  <section id="main-visual">
+    <div id="main-message">
+      <h1>Cat Coffee</h1>
+      <p>Original Coffee</p>
+      <p>自家焙煎コーヒーを味わう</p>
+    </div>
+    <div>
+       <img src="images/index/index-main-coffee.jpg" id="coffee-visual" alt="main-coffee-image">  
+    </div>
+  </section>
 
 <h1>CONCEPT</h1>
 
@@ -78,7 +87,7 @@
 
 
 
-
+</article>
 </main>
 
 
